Shorten note ids

--- a/data/castaneda/5a88c3a3.md
+++ b/data/castaneda/5a88c3a3.md
@@ -2,6 +2,7 @@ author: Carlos Castaneda
 colors: [ magenta, blue, orange, red ]
 hints: []
 source: Journey to Ixtlan
+links: [ 7bda79b4 ]
 ---
 A warrior is not a leaf at the mercy of the wind.
 No one can push him; no one can make him do things
