--- a/data/castaneda/7bda79b4.md
+++ b/data/castaneda/7bda79b4.md
@@ -2,6 +2,7 @@ author: Carlos Castaneda
 colors: [ magenta, blue, orange, red ]
 hints: []
 source: Journey to Ixtlan
+links: [ 5a88c3a3 ]
 ---
 A warrior is a hunter. He calculates everything.
 That's control.
