--- a/data/me/1c38206c.md
+++ b/data/me/1c38206c.md
@@ -1,7 +1,7 @@
 author: Roman M. Yagodin
 colors: [ magenta, blue ]
 hints:
-  - Any think\bg is a prototype.
+  - Any think\b\b\b\b\bthing is a prototype.
   - You also a prototype!
   - This program is just a prototype.
   - JavaScript is a prototype-based object-oriented programming language.
