Add orange, some new content

--- a/data/me/1c38206c.md
+++ b/data/me/1c38206c.md
@@ -1,5 +1,5 @@
-author: Roman M. Yagodin
-colors: [ magenta, blue ]
+author: Roman Yagodin
+colors: [ blue ]
 hints:
   - Any think\b\b\b\b\bthing is a prototype.
   - You also a prototype!
