--- a/data/me/470ca0f2.md
+++ b/data/me/470ca0f2.md
@@ -1,7 +1,7 @@
 author: Roman Yagodin
 colors: [ cyan, green ]
 hints: []
-year: 2024
+lang: ru
 ---
 Гляжу на себя как на проекцию
 многомерного, непознаваемого
