--- a/data/lenin/132b1b9.md
+++ b/data/lenin/132b1b9.md
@@ -1,8 +1,9 @@
 author: Vladimir Ulyanov (Lenin)
+co-authors: [ Hegel, Chernyshevsky, Plekhanov ]
 colors: [ white, blue ]
+lang: ru
 hints:
   - There is no such thing as abstract thruth, the truth is always concrete.
   - https://en.wikipedia.org/wiki/Concrete
-persons: [ Hegel, Chernyshevsky, Plekhanov ]
 ---
 Абстрактной истины нет, истина всегда конкретна.
