--- a/data/lenin/f2694f9b.md
+++ b/data/lenin/f2694f9b.md
@@ -1,6 +1,7 @@
 author: Vladimir Ulyanov (Lenin)
 colors: [ white, blue, red ]
 hints: []
+lang: ru
 source: Философские тетради
 ---
 От живого созерцания к абстрактному мышлению и от него к практике —-
