--- a/data/lenin/132b1b9.md
+++ b/data/lenin/132b1b9.md
@@ -6,4 +6,5 @@ hints:
   - There is no such thing as abstract thruth, the truth is always concrete.
   - https://en.wikipedia.org/wiki/Concrete
 ---
-Абстрактной истины нет, истина всегда конкретна.
+Абстрактной истины нет,
+  истина всегда конкретна.
