--- a/data/lenin/f2694f9b.md
+++ b/data/lenin/f2694f9b.md
@@ -4,5 +4,8 @@ hints: []
 lang: ru
 source: Философские тетради
 ---
-От живого созерцания к абстрактному мышлению и от него к практике —-
-таков диалектический путь познания истины, познания объективной реальности.
+От живого созерцания к абстрактному мышлению
+  и от него к практике —-
+
+таков диалектический путь познания истины,
+  познания объективной реальности.
