--- a/data/etc/ed228d4e.md
+++ b/data/etc/ed228d4e.md
@@ -1,5 +1,8 @@
+---
 author: Multiple
 colors: [ magenta, cyan, green ]
+hints:
+  - "It is said that some zerths spend years poring over the combinations of the plates, looking for new significance in the teaching."
 links:
   - https://torment.fandom.com/wiki/Unbroken_Circle_of_Zerthimon
 ---
@@ -10,6 +13,3 @@ containing teachings of Zerthimon, the founder of the githzerai people.
 
 The Circle is made up of a series of interlocking circles that fold out from one another,
 depending on which branch the reader wishes to follow in the path of teachings...
-
-it is said that some zerths spend years poring over the combinations of the plates,
-looking for new significance in the teaching.
