Various changes: - add notes about slowreading - remove some hardbreaks - better for mobile - leave only one link per note - some translations, first steps to implement "In English, please!" action - increase type delay

--- a/data/carroll/0593d018.md
+++ b/data/carroll/0593d018.md
@@ -2,10 +2,6 @@
 author: Lewis Carroll
 colors: [ green, yellow ]
 hints:
-  - "Remember the last major (or minor) thing you have done today.\n\
-    Was it just for you, for the others, or both?\n\
-    Be honest with you!"
+  - Remember the last major (or minor) thing you have done today.
 ---
-One of the secrets of life
-is that all that is really worth the doing
-is what we do for others.
+One of the secrets of life is that all that is really worth the doing is what we do for others.
