--- a/data/carroll/1c2d1548.md
+++ b/data/carroll/1c2d1548.md
@@ -1,10 +1,8 @@
 ---
 author: Lewis Carroll
-colors: [ blue, yellow ]
+colors: [ blue, green, yellow ]
 hints:
   - What the word _accurately_ means here?
   - What (or whom) we should try to preserve during conveying a meaning?
 ---
-One of the hardest things in the world
-is to convey a meaning accurately
-from one mind to another.
+One of the hardest things in the world is to convey a meaning accurately from one mind to another.
