--- a/data/etc/7bf63644.md
+++ b/data/etc/7bf63644.md
@@ -3,15 +3,13 @@ author: San Juan de la Cruz
 co-authors: [ Carlos Castaneda ]
 source: Dichos de Luz y Amor
 colors: [ magenta, blue, cyan, green ]
-links:
-  - https://magazines.gorky.media/inostran/2018/4/zhizn-i-stihi-huana-de-la-krus.html
+link: https://magazines.gorky.media/inostran/2018/4/zhizn-i-stihi-huana-de-la-krus.html
 ---
 The conditions of a solitary bird are five:
 
 The first, that it flies to the highest point;
 
-the second, that it does not suffer for company,
-  not even of its own kind;
+the second, that it does not suffer for company, not even of its own kind;
 
 the third, that it aims its beak to the skies;
 
