--- a/data/etc/b977e1a0.md
+++ b/data/etc/b977e1a0.md
@@ -1,11 +1,11 @@
 ---
 author: Benoit Mandelbrot
 colors: [ white, blue, green ]
-links:
-  - https://www.youtube.com/watch?v=6avJHaC3C2U
+link: https://www.youtube.com/watch?v=6avJHaC3C2U
 ---
 Clouds are not spheres,
 mountains are not cones,
 coastlines are not circles,
 and bark is not smooth,
-nor does lightning travel in a straight line.
+nor does lightning travel
+  in a straight line.
