--- a/data/lenin/132b1b9-ru.md
+++ b/data/lenin/132b1b9-ru.md
@@ -2,7 +2,8 @@
 author: Vladimir Ulyanov (Lenin)
 co-authors: [ Hegel, Chernyshevsky, Plekhanov ]
 colors: [ white, blue ]
-hints: [] 
+lang: ru
+hints: []
 link: https://en.wikipedia.org/wiki/Concrete
 ---
-There is no such thing as abstract thruth, the truth is always concrete.
+Абстрактной истины нет, истина всегда конкретна.
