--- a/data/carroll/04b68d24.md
+++ b/data/carroll/04b68d24.md
@@ -3,5 +3,4 @@ author: Lewis Carroll
 colors: [ blue, yellow ]
 hints: []
 ---
-No discussion between two persons can be of any use,
-until each knows clearly what it is that the other asserts.
+No discussion between two persons can be of any use, until each knows clearly what it is that the other asserts.
