--- a/data/carroll/63d5724c.md
+++ b/data/carroll/63d5724c.md
@@ -11,6 +11,4 @@ Alice came to a fork in the road.
 
 -- I don't know, -- Alice answered.
 
--- Then, -- said the Cat,
-
--- it doesn't matter.
+-- Then, -- said the Cat, -- it doesn't matter.
