--- a/data/castaneda/7bda79b4.md
+++ b/data/castaneda/7bda79b4.md
@@ -3,10 +3,8 @@ author: Carlos Castaneda
 colors: [ magenta, blue, orange, red ]
 hints: []
 source: Journey to Ixtlan
-links: [ 5a88c3a3 ]
+link: 5a88c3a3
 ---
-A warrior is a hunter. He calculates everything.
-That's control.
+A warrior is a hunter. He calculates everything. That's control.
 
-Once his calculations are over, he acts. He lets go.
-That's abandon.
+Once his calculations are over, he acts. He lets go. That's abandon.
