--- a/data/socrates/f70c1886.md
+++ b/data/socrates/f70c1886.md
@@ -1,10 +1,8 @@
 ---
 author: Socrates
-colors: [ white, green ]
+colors: [ white, blue, yellow ]
 hints:
-  - I *know* that know nothing.
-links:
-  - https://en.wikipedia.org/wiki/I_know_that_I_know_nothing
-  - https://ru.wikipedia.org/wiki/%D0%AF_%D0%B7%D0%BD%D0%B0%D1%8E%2C_%D1%87%D1%82%D0%BE_%D0%BD%D0%B8%D1%87%D0%B5%D0%B3%D0%BE_%D0%BD%D0%B5_%D0%B7%D0%BD%D0%B0%D1%8E
+  - I _know_ that know nothing.
+link: https://en.wikipedia.org/wiki/I_know_that_I_know_nothing
 ---
 I know that I know nothing.
