--- a/data/marx/50935c17-ru.md
+++ b/data/marx/50935c17-ru.md
@@ -2,7 +2,7 @@
 author: Karl Marx
 co-authors: [ Spinoza, Hegel ]
 lang: ru
-colors: [ white, blue ]
+colors: [ white, blue, orange ]
 ---
 Необходимость слепа, пока не станет осознанной.
 Свобода - это сознание необходимости.
