--- a/data/marx/50935c17y.md
+++ b/data/marx/50935c17y.md
@@ -1,7 +1,7 @@
 ---
 author: Karl Marx
 co-authors: [ Spinoza, Hegel ]
-colors: [ white, blue ]
+colors: [ white, blue, orange ]
 link: https://www.socratic-method.com/quote-meanings-and-interpretations/karl-marx-necessity-is-blind-until-it-becomes-conscious-freedom-is-the-consciousness-of-necessity
 ---
 Necessity is blind until it becomes conscious.
