--- a/data/about/58ea074f.md
+++ b/data/about/58ea074f.md
@@ -2,7 +2,7 @@
 author: Roman Yagodin
 colors: [ white ]
 ---
-The main (and only) resource in Protogame is the _action points_ (AP).
+The main (and only) resource in Philogem is the _action points_ (AP).
 
 Action points recieved semi-randomly on a daily basis and could be spent to "follow" actions (costs 2 AP) and other actions (costs 1 AP).
 
