--- a/data/about/e6aa104d.md
+++ b/data/about/e6aa104d.md
@@ -2,7 +2,7 @@
 author: Roman Yagodin
 colors: [ white ]
 ---
-Every Protogame run begins with player level equal to 0.
+Every Philogem run begins with player level equal to 0.
 
 Every time player returns to the game after 12h interval, his/hers level is increased by 1 point.
 
