Implement basic word-wrap

--- a/data/about/d4c1df21.md
+++ b/data/about/d4c1df21.md
@@ -2,7 +2,7 @@
 author: Roman Yagodin
 colors: [ white ]
 ---
-The Philogem project combines (in a strange way) a lot of things which is dear to me: WWW, programming, FLOSS, computer games, languages, philosophy, self-knowledge, humor, etc.
+The Philogem project combines (in a strange way) a lot of things which is dear to me: WWW, programming, FLOSS, computer games, languages, philosophy, poetry, self-knowledge, humor, etc.
 
 You can think of it as a blog, a collection of personal notes, a game of words - that you can play with, then make your own, and then develop further in a ways that you (and probably only you) would know, understand and love.
 
