--- a/data/carroll/1c2d1548.md
+++ b/data/carroll/1c2d1548.md
@@ -5,4 +5,6 @@ hints:
   - What the word _accurately_ means here?
   - What (or whom) we should try to preserve during conveying a meaning?
 ---
-One of the hardest things in the world is to convey a meaning accurately from one mind to another.
+One of the hardest things in the world
+is to convey a meaning accurately
+from one mind to another.
