--- a/data/castaneda/7bda79b4.md
+++ b/data/castaneda/7bda79b4.md
@@ -5,6 +5,12 @@ hints: []
 source: Journey to Ixtlan
 link: 5a88c3a3
 ---
-A warrior is a hunter. He calculates everything. That's control.
+A warrior is a hunter.
+He calculates everything.
 
-Once his calculations are over, he acts. He lets go. That's abandon.
+That's control.
+
+Once his calculations are over,
+he acts. He lets go.
+
+That's abandon.
