--- a/data/lenin/132b1b9-ru.md
+++ b/data/lenin/132b1b9-ru.md
@@ -6,4 +6,5 @@ lang: ru
 hints: []
 link: https://en.wikipedia.org/wiki/Concrete
 ---
-Абстрактной истины нет, истина всегда конкретна.
+Абстрактной истины нет,
+истина всегда конкретна.
