--- a/data/lenin/132b1b9.md
+++ b/data/lenin/132b1b9.md
@@ -5,4 +5,5 @@ colors: [ white, blue ]
 hints: [] 
 link: https://en.wikipedia.org/wiki/Concrete
 ---
-There is no such thing as abstract thruth, the truth is always concrete.
+There is no such thing as abstract thruth,
+the truth is always concrete.
