--- a/data/carroll/0593d018.md
+++ b/data/carroll/0593d018.md
@@ -4,4 +4,6 @@ colors: [ green, yellow ]
 hints:
   - Remember the last major (or minor) thing you have done today.
 ---
-One of the secrets of life is that all that is really worth the doing is what we do for others.
+One of the secrets of life
+is that all that is really worth the doing
+is what we do for others.
