--- a/data/castaneda/5a88c3a3.md
+++ b/data/castaneda/5a88c3a3.md
@@ -7,6 +7,9 @@ link: 7bda79b4
 ---
 A warrior is not a leaf at the mercy of the wind.
 
-No one can push him; no one can make him do things against himself or against his better judgment.
+No one can push him;
+no one can make him do things against himself
+or against his better judgment.
 
-A warrior is tuned to survive, and he survives in the best of all possible fashions.
+A warrior is tuned to survive, and he survives
+in the best of all possible fashions.
