--- a/data/multiple/ed228d4e.md
+++ b/data/multiple/ed228d4e.md
@@ -2,8 +2,6 @@
 author: Multiple
 source: Torment Wiki
 colors: [ magenta, cyan, green ]
-hints:
-  - "It is said that some zerths spend years poring over the combinations of the plates, looking for new significance in the teaching."
 link: https://torment.fandom.com/wiki/Unbroken_Circle_of_Zerthimon
 ---
 This small round stone is the "Unbroken Circle of Zerthimon".
@@ -11,3 +9,5 @@ This small round stone is the "Unbroken Circle of Zerthimon".
 The Unbroken Circle is a *zerth* religious text, containing teachings of Zerthimon, the founder of the githzerai people.
 
 The Circle is made up of a series of interlocking circles that fold out from one another, depending on which branch the reader wishes to follow in the path of teachings...
+
+It is said that some zerths spend years poring over the combinations of the plates, looking for new significance in the teaching.
