Rework AP, almost remove lvl, note formatting

--- a/data/about/58ea074f.md
+++ b/data/about/58ea074f.md
@@ -2,8 +2,12 @@
 author: Roman Yagodin
 colors: [ white ]
 ---
-The main (and only) resource in Philogem is the _action points_ (AP).
+The main (and only) resource in Philogem is _action points_ (AP).
 
-Action points recieved semi-randomly on a daily basis and could be spent to "follow" actions (costs 2 AP) and other actions (costs 1 AP).
+Action points are awarded for performing certain in-game actions.
 
-When player AP counter reaches 0, he/she will no longer perform any actions in game and should wait at least 12h to recieve more AP in order to continue.
+When a player's AP counter reaches 8, he/she cannot perform any actions in game
+and should wait until the AP counter decreases.
+
+Action points degrade at a rate of 1 AP per 2 hours of real time.
+This simulates AP spending.
