--- a/data/etc/7bf63644.md
+++ b/data/etc/7bf63644.md
@@ -7,12 +7,18 @@ link: https://magazines.gorky.media/inostran/2018/4/zhizn-i-stihi-huana-de-la-kr
 ---
 The conditions of a solitary bird are five:
 
-The first, that it flies to the highest point;
+The first,
+that it flies to the highest point;
 
-the second, that it does not suffer for company, not even of its own kind;
+the second,
+that it does not suffer for company,
+not even of its own kind;
 
-the third, that it aims its beak to the skies;
+the third,
+that it aims its beak to the skies;
 
-the fourth, that it does not have a definite color;
+the fourth,
+that it does not have a definite color;
 
-the fifth, that it sings very softly.
+the fifth,
+that it sings very softly.
