--- a/data/etc/b977e1a0.md
+++ b/data/etc/b977e1a0.md
@@ -7,5 +7,4 @@ Clouds are not spheres,
 mountains are not cones,
 coastlines are not circles,
 and bark is not smooth,
-nor does lightning travel
-  in a straight line.
+nor does lightning travel in a straight line.
