--- a/data/about/d4c1df21.md
+++ b/data/about/d4c1df21.md
@@ -2,8 +2,20 @@
 author: Roman Yagodin
 colors: [ white ]
 ---
-The Philogem project combines (in a strange way) a lot of things which is dear to me: WWW, programming, FLOSS, computer games, languages, philosophy, poetry, self-knowledge, humor, etc.
+The Philogem project combines (in a strange way)
+a lot of things which is dear to me:
+programming, WWW, FLOSS, computer games,
+languages, philosophy, self-knowledge,
+poetry, humor, etc, etc...
 
-You can think of it as a blog, a collection of personal notes, a game of words - that you can play with, then make your own, and then develop further in a ways that you (and probably only you) would know, understand and love.
+You can think of it as a kind of blog,
+a collection of important personal notes,
+or just a game of words -
 
-I'm trying to keep it simple, but hopefully not too stupid :)
+which you can play with, make your own,
+and possibly even develop further
+in a ways that you (and only you)
+would know, understand and love.
+
+I'm trying to keep it very simple,
+but hopefully not too stupid ;-)
