Add A. Klein notes, plus some fixups

--- a/data/about/d4c1df21.md
+++ b/data/about/d4c1df21.md
@@ -2,20 +2,16 @@
 author: Roman Yagodin
 colors: [ white ]
 ---
-The Philogem project combines (in a strange way)
-a lot of things which is dear to me:
-programming, WWW, FLOSS, computer games,
-languages, philosophy, self-knowledge,
-poetry, humor, etc, etc...
+The Philogem project combines (yes, in a strange way!) a lot of things.
 
 You can think of it as a kind of blog,
 a collection of important personal notes,
 or just a game of words -
 
-which you can play with, make your own,
+a field which you can play on, make your own,
 and possibly even develop further
 in a ways that you (and only you)
-would know, understand and love.
+would like, understand and know.
 
-I'm trying to keep it very simple,
+I'm trying to keep the base simple,
 but hopefully not too stupid ;-)
