--- a/data/multiple/d015b4e4.md
+++ b/data/multiple/d015b4e4.md
@@ -4,8 +4,11 @@ source: Wikipedia
 colors: [ white, blue, cyan, green, yellow ]
 link: https://en.wikipedia.org/wiki/Slow_reading
 ---
-_Slow reading_ is the intentional reduction in the speed of reading, carried out to increase comprehension or pleasure.
+_Slow reading_ is the intentional reduction in the speed of reading,
+carried out to increase comprehension or pleasure.
 
-The concept appears to have originated in the study of philosophy and literature as a technique to more fully comprehend and appreciate a complex text.
+The concept appears to have originated in the study of philosophy and literature
+as a technique to more fully comprehend and appreciate a complex text.
 
-More recently, there has been increased interest in slow reading as result of the _slow movement_.
+More recently, there has been increased interest in slow reading
+as result of the _slow movement_.
