--- a/data/multiple/d015b4e4-ru.md
+++ b/data/multiple/d015b4e4-ru.md
@@ -5,8 +5,11 @@ colors: [ white, blue, cyan, green, yellow ]
 lang: ru
 link: https://ru.wikipedia.org/wiki/%D0%9C%D0%B5%D0%B4%D0%BB%D0%B5%D0%BD%D0%BD%D0%BE%D0%B5_%D1%87%D1%82%D0%B5%D0%BD%D0%B8%D0%B5
 ---
-_Медленное чтение_ -- это намеренное снижение скорости чтения, цель которого -- улучшение понимания текста или получение удовольствия.
+_Медленное чтение_ -- это намеренное снижение скорости чтения,
+цель которого -- улучшение понимания текста или получение удовольствия.
 
-Метод медленного чтения позволяет более полно понять и оценить сложный текст при изучении философии и литературы.
+Метод медленного чтения позволяет более полно понять и оценить сложный текст,
+что важно при изучении философии и литературы.
 
-Однако в последнее время наблюдается повышенный интерес к медленному чтению как направлению в рамках _медленного движения_.
+Однако в последнее время наблюдается повышенный интерес к медленному чтению
+как направлению в рамках _медленного движения_.
