Add "Boethiah' Pillow Book' note

--- a/data/lenin/132b1b9-ru.md
+++ b/data/lenin/132b1b9-ru.md
@@ -4,6 +4,7 @@ co-authors: [ Hegel, Chernyshevsky, Plekhanov ]
 colors: [ white, blue ]
 lang: ru
 link: https://en.wikipedia.org/wiki/Concrete
+license: CC-BY-SA
 ---
 Абстрактной истины нет,
 истина всегда конкретна.
