--- a/data/multiple/ed228d4e.md
+++ b/data/multiple/ed228d4e.md
@@ -3,6 +3,7 @@ author: Multiple
 source: Torment Wiki
 colors: [ magenta, cyan, green ]
 link: https://torment.fandom.com/wiki/Unbroken_Circle_of_Zerthimon
+license: CC-BY-SA
 ---
 This small round stone is the "Unbroken Circle of Zerthimon".
 
