--- a/data/multiple/d015b4e4-ru.md
+++ b/data/multiple/d015b4e4-ru.md
@@ -4,6 +4,7 @@ source: Wikipedia
 colors: [ white, blue, cyan, green, yellow ]
 lang: ru
 link: https://ru.wikipedia.org/wiki/%D0%9C%D0%B5%D0%B4%D0%BB%D0%B5%D0%BD%D0%BD%D0%BE%D0%B5_%D1%87%D1%82%D0%B5%D0%BD%D0%B8%D0%B5
+license: CC-BY-SA
 ---
 _Медленное чтение_ -- это намеренное снижение скорости чтения,
 цель которого -- улучшение понимания текста или получение удовольствия.
