--- a/data/multiple/d015b4e4.md
+++ b/data/multiple/d015b4e4.md
@@ -3,6 +3,7 @@ author: Multiple
 source: Wikipedia
 colors: [ white, blue, cyan, green, yellow ]
 link: https://en.wikipedia.org/wiki/Slow_reading
+license: CC-BY-SA
 ---
 _Slow reading_ is the intentional reduction in the speed of reading,
 carried out to increase comprehension or pleasure.
