--- a/data/socrates/f70c1886-ru.md
+++ b/data/socrates/f70c1886-ru.md
@@ -3,5 +3,6 @@ author: Socrates
 colors: [ white, blue, yellow ]
 lang: ru
 link: https://ru.wikipedia.org/wiki/%D0%AF_%D0%B7%D0%BD%D0%B0%D1%8E%2C_%D1%87%D1%82%D0%BE_%D0%BD%D0%B8%D1%87%D0%B5%D0%B3%D0%BE_%D0%BD%D0%B5_%D0%B7%D0%BD%D0%B0%D1%8E
+license: CC-BY-SA
 ---
 Я знаю, что ничего не знаю.
