--- a/data/socrates/f70c1886.md
+++ b/data/socrates/f70c1886.md
@@ -2,5 +2,6 @@
 author: Socrates
 colors: [ white, blue, yellow ]
 link: https://en.wikipedia.org/wiki/I_know_that_I_know_nothing
+license: CC-BY-SA
 ---
 I know that I know nothing.
