Separate links and hyperlinks

--- a/data/cervantes/23dfab52.md
+++ b/data/cervantes/23dfab52.md
@@ -2,7 +2,7 @@
 author: Miguel de Cervantes
 source: Don Quixote
 colors: [ white, magenta, blue, cyan, green, yellow, orange, red ]
-link: https://www.zacharyfruhling.com/philosophy-blog/being-a-stranger-to-yourself-the-many-meanings-of-know-thyself
+href: https://www.zacharyfruhling.com/philosophy-blog/being-a-stranger-to-yourself-the-many-meanings-of-know-thyself
 ---
 Make it thy business to know thyself,
 which is the most difficult lesson in the world.
