--- a/data/etc/7bf63644.md
+++ b/data/etc/7bf63644.md
@@ -3,7 +3,7 @@ author: San Juan de la Cruz
 co-authors: [ Carlos Castaneda ]
 source: Dichos de Luz y Amor
 colors: [ magenta, blue, cyan, green ]
-link: https://magazines.gorky.media/inostran/2018/4/zhizn-i-stihi-huana-de-la-krus.html
+href: https://magazines.gorky.media/inostran/2018/4/zhizn-i-stihi-huana-de-la-krus.html
 ---
 The conditions of a solitary bird are five:
 
