--- a/data/etc/b977e1a0.md
+++ b/data/etc/b977e1a0.md
@@ -1,7 +1,7 @@
 ---
 author: Benoit Mandelbrot
 colors: [ white, blue, green ]
-link: https://www.youtube.com/watch?v=6avJHaC3C2U
+href: https://www.youtube.com/watch?v=6avJHaC3C2U
 ---
 Clouds are not spheres,
 mountains are not cones,
