--- a/data/klein/55866b6f-ru.md
+++ b/data/klein/55866b6f-ru.md
@@ -3,7 +3,7 @@ author: Alexander Klein
 colors: [ white, blue ]
 lang: ru
 source: Манифест Диалектической логики, 2020
-link: https://proza.ru/2020/01/27/1585
+href: https://proza.ru/2020/01/27/1585
 ---
 "Диалектическая логика" является "второй базовой логикой мышления" –
 принципиально новой операционной средой мышления,
