--- a/data/lenin/132b1b9-ru.md
+++ b/data/lenin/132b1b9-ru.md
@@ -3,7 +3,7 @@ author: Vladimir Ulyanov (Lenin)
 co-authors: [ Hegel, Chernyshevsky, Plekhanov ]
 colors: [ white, blue ]
 lang: ru
-link: https://en.wikipedia.org/wiki/Concrete
+href: https://en.wikipedia.org/wiki/Concrete
 license: CC-BY-SA
 ---
 Абстрактной истины нет,
