--- a/data/lenin/132b1b9.md
+++ b/data/lenin/132b1b9.md
@@ -2,7 +2,7 @@
 author: Vladimir Ulyanov (Lenin)
 co-authors: [ Hegel, Chernyshevsky, Plekhanov ]
 colors: [ white, blue ]
-link: https://en.wikipedia.org/wiki/Concrete
+href: https://en.wikipedia.org/wiki/Concrete
 license: CC-BY-SA
 ---
 There is no such thing as abstract thruth,
