--- a/data/multiple/483ba38b.md
+++ b/data/multiple/483ba38b.md
@@ -2,7 +2,7 @@
 author: Multiple
 source: The Elder Scrolls Wiki
 colors: [ magenta, blue, orange ]
-link: https://elderscrolls.fandom.com/wiki/Boethiah%27s_Pillow_Book
+href: https://elderscrolls.fandom.com/wiki/Boethiah%27s_Pillow_Book
 license: CC-BY-SA
 ---
 No words can describe what you see.
