--- a/data/socrates/f70c1886.md
+++ b/data/socrates/f70c1886.md
@@ -1,7 +1,7 @@
 ---
 author: Socrates
 colors: [ white, blue, yellow ]
-link: https://en.wikipedia.org/wiki/I_know_that_I_know_nothing
+href: https://en.wikipedia.org/wiki/I_know_that_I_know_nothing
 license: CC-BY-SA
 ---
 I know that I know nothing.
