--- a/data/etc/72e07e3d.md
+++ b/data/etc/72e07e3d.md
@@ -1,6 +1,6 @@
 ---
 author: Rumi
 colors: [red]
-link: https://crawl.develz.org/
+href: https://crawl.develz.org/
 ---
 If all you can do is crawl, start crawling.
