--- a/data/klein/55866b6f.md
+++ b/data/klein/55866b6f.md
@@ -2,7 +2,7 @@
 author: Alexander Klein
 colors: [ white, blue ]
 source: The Dialectical Logic Manifesto, 2020
-link: https://proza.ru/2020/02/04/1534
+href: https://proza.ru/2020/02/04/1534
 ---
 "Dialectical logic" is the "second core logic of thought",
 which is a fundamentally new operating environment of thought,
