Add two notes, ability to exclude draft notes which filenames starts with "_"

--- a/data/castaneda/7bda79b4.md
+++ b/data/castaneda/7bda79b4.md
@@ -9,7 +9,7 @@ He calculates everything.
 
 That's control.
 
-Once his calculations are over,
-he acts. He lets go.
+Once his calculations are over, he acts.
+He lets go.
 
 That's abandon.
